--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,9 @@
     <string name="crime_details_label">Details</string>
     <string name="crime_solved_label">Solved</string>
     <string name="date_picker_title">Date of crime:</string>
+    <string name="time_picker_title">Time of crime:</string>
     <string name="new_crime">New Crime</string>
+    <string name="delete_crime">Delete crime</string>
     <string name="show_subtitle">Show Subtitle</string>
     <string name="hide_subtitle">Hide Subtitle</string>
     <plurals name="subtitle_plural">
@@ -13,6 +15,7 @@
         <item quantity="other">%1$d crimes</item>
     </plurals>
     <string name="crime_suspect_text">Choose Suspect</string>
+    <string name="ok_text">OK</string>
     <string name="no_dial_suspect_text">No suspect</string>
     <string name="dial_suspect_text">Call %s</string>
     <string name="crime_report_text">Send Crime Report</string>
@@ -27,4 +30,6 @@
     <string name="crime_photo_button_description">Take photo of crime scene</string>
     <string name="crime_photo_no_image_description"> Crime scene photo (not set)</string>
     <string name="crime_photo_image_description">Crime scene photo (set)</string>
+    <string name="permission_title">Allow Criminal Intent to access your contacts?</string>
+    <string name="permission_message">Criminal Intent uses this to make some features work, choose and dial numbers.</string>
 </resources>
